2001-12-24  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* tmda-make-address: New program that replaces tmda-dated-address,
	tmda-keyword-address, and tmda-sender-address.

2001-12-20  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* tmda-filter: If SENDER or RECIPIENT is not in the environment,
	print a warning and raise an exception that defers delivery.

2001-12-19  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* tmda-filter (list_headers): Turn off auto-replies if the message
	contains any List-XXX: headers.

2001-12-17  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* tmda-filter (verify_keyword_cookie): Bugfix.  Wasn't able to
	handle `.' within a keyword.  Now after splitting the cookie on
	`.', everything after the last dot is the mac, and everything
	before it is the keyword.
	Reported by Matt Armstrong.

2001-12-14  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* tmda-filter (envelope_sender): Fully qualify the envelope sender
	if it only contains the user part.  This will be the case when
	local mail is exchanged on a Sendmail box.

	(envelope_recipient): Ditto.

2001-12-13  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* tmda-filter (send_bounce): Get X-Delivery-Agent info from
	Version.py instead of Defaults.py.

	* tmda-inject (inject_message): Ditto.

2001-12-12  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* tmda-inject (inject_message): Optionally, add an
	X-TMDA-Fingerprint header.

2001-12-11  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* tmda-inject (inject_message): Optionally remove the headers
	contained in Defaults.PURGED_HEADERS.
	
2001-12-10  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* tmda-inject (inject_message): Bugfix.  tmda-inject was not
	tagging addresses in Mail-Followup-To headers generated by the
	MUA.  This was a problem because the header would direct followups