@@ -2,9 +2,9 @@
 
 If you are upgrading from a release of TMDA < 0.44:
 
-* tmda-make-address has replaced tmda-dated-address,
-  tmda-keyword-address, and tmda-sender-address.  Run
-  `tmda-make-address -h' to get a list of available options.
+* tmda-address has replaced tmda-dated-address, tmda-keyword-address,
+  and tmda-sender-address.  Run `tmda-address -h' to get a list of
+  available options.
 
 ======================================================================
 
