@@ -85,7 +85,7 @@ file.  e.g, <code>to jason-promos.8d06eu@mastaler.com confirm</code>
 </ul><br>
 </ul>
 
-The <b>tmda-make-address</b> program is included to generate the
+The <b>tmda-address</b> program is included to generate the
 various types of tagged addresses from the command line.  Run the
 utility with the <b>-h</b> flag to get usage information.  
 <br><br>
@@ -317,7 +317,7 @@ add the following line to your .gnus file:<br>
 If you still read <a href="http://www.usenet.org/" TARGET="Resource Window">USENET</a> 
 (a notorious source of SPAM), you might find it useful to post using a
 dated address.  Simply have your newsreader call
-<strong>tmda-make-address -d</strong> and use the result as your
+<strong>tmda-address -d</strong> and use the result as your
 posting address.
 <br><br>
 
@@ -329,7 +329,7 @@ be accomplished with the following addition to your .gnus file:
 <blockquote><pre>
 
 (defun tmda-dated-address () 
-  (shell-command-to-string "/path/to/tmda/bin/tmda-make-address -d"))
+  (shell-command-to-string "/path/to/tmda/bin/tmda-address -d"))
  
 (setq gnus-posting-styles 
       (message-this-is-news           
@@ -357,7 +357,7 @@ alias for tcsh.
 
 <blockquote><pre>
 
-alias slrn-dated 'm4 -DTMDADATED=`tmda-make-address -d` ~/.slrnrc.m4 > ~/.slrnrc && slrn -h newshost'
+alias slrn-dated 'm4 -DTMDADATED=`tmda-address -d` ~/.slrnrc.m4 > ~/.slrnrc && slrn -h newshost'
 
 </pre></blockquote>
 </ul>
