@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Mon Dec 24 13:40:37 2001 -->
+<!-- Thu Dec 27 17:47:37 2001 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -229,7 +229,7 @@ file.  e.g, <code>to jason-promos.8d06eu@mastaler.com confirm</code>
 </ul><br>
 </ul>
 
-The <b>tmda-make-address</b> program is included to generate the
+The <b>tmda-address</b> program is included to generate the
 various types of tagged addresses from the command line.  Run the
 utility with the <b>-h</b> flag to get usage information.  
 <br><br>
@@ -461,7 +461,7 @@ add the following line to your .gnus file:<br>
 If you still read <a href="http://www.usenet.org/" TARGET="Resource Window">USENET</a> 
 (a notorious source of SPAM), you might find it useful to post using a
 dated address.  Simply have your newsreader call
-<strong>tmda-make-address -d</strong> and use the result as your
+<strong>tmda-address -d</strong> and use the result as your
 posting address.
 <br><br>
 
@@ -473,7 +473,7 @@ be accomplished with the following addition to your .gnus file:
 <blockquote><pre>
 
 (defun tmda-dated-address () 
-  (shell-command-to-string "/path/to/tmda/bin/tmda-make-address -d"))
+  (shell-command-to-string "/path/to/tmda/bin/tmda-address -d"))
  
 (setq gnus-posting-styles 
       (message-this-is-news           
@@ -501,7 +501,7 @@ alias for tcsh.
 
 <blockquote><pre>
 
-alias slrn-dated 'm4 -DTMDADATED=`tmda-make-address -d` ~/.slrnrc.m4 > ~/.slrnrc && slrn -h newshost'
+alias slrn-dated 'm4 -DTMDADATED=`tmda-address -d` ~/.slrnrc.m4 > ~/.slrnrc && slrn -h newshost'
 
 </pre></blockquote>
 </ul>
