@@ -1,3 +1,7 @@
+2001-12-27  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* tmda-address: Rename tmda-make-address tmda-address.
+
 2001-12-24  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* tmda-make-address: New program that replaces tmda-dated-address,
